[gd_scene load_steps=3 format=3 uid="uid://xgmiul02cisf"]

[ext_resource type="Script" path="res://scripts/battleground/ui/battle_hud.gd" id="1_0t4ao"]
[ext_resource type="Script" path="res://scripts/battleground/selector_interface.gd" id="2_iiq6k"]

[node name="BattleHUD" type="MarginContainer" node_paths=PackedStringArray("attack_button", "skip_button", "action_list")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -201.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_0t4ao")
attack_button = NodePath("UI/Menus/Main/Attack/Ac_Attack")
skip_button = NodePath("UI/Menus/Main/Skip/Ac_Skip")
action_list = NodePath("UI/Menus/CommandList/ScrollContainer/VBoxContainer")

[node name="UI" type="Control" parent="."]
layout_mode = 2

[node name="CharacterName" type="Label" parent="UI"]
layout_mode = 0
offset_left = 13.0
offset_top = -24.0
offset_right = 210.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 29
text = "Placeholder"
vertical_alignment = 2

[node name="Menus" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="HBoxContainer" parent="UI/Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attack" type="CenterContainer" parent="UI/Menus/Main"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Ac_Attack" type="Button" parent="UI/Menus/Main/Attack"]
layout_mode = 2
text = "Attack"

[node name="Skip" type="CenterContainer" parent="UI/Menus/Main"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Ac_Skip" type="Button" parent="UI/Menus/Main/Skip"]
layout_mode = 2
text = "Skip"

[node name="CommandList" type="HBoxContainer" parent="UI/Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/Menus/CommandList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CLBackButton" type="Button" parent="UI/Menus/CommandList/CenterContainer"]
layout_mode = 2
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Menus/CommandList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.12

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/CommandList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectTarget" type="Control" parent="UI/Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/Menus/SelectTarget"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_right = 135.0
grow_vertical = 0
text = "Back"
alignment = 0

[node name="Selector" type="Node" parent="."]
script = ExtResource("2_iiq6k")

[connection signal="pressed" from="UI/Menus/Main/Attack/Ac_Attack" to="." method="_on_ac_attack_pressed"]
[connection signal="pressed" from="UI/Menus/Main/Skip/Ac_Skip" to="." method="_on_ac_skip_pressed"]
[connection signal="pressed" from="UI/Menus/CommandList/CenterContainer/CLBackButton" to="." method="_on_command_list_back_button_pressed"]
[connection signal="pressed" from="UI/Menus/SelectTarget/Button" to="." method="_on_select_target_back_pressed"]
[connection signal="action_selection_started" from="Selector" to="." method="open_hud"]
